tests/toylang/neg/000939_mutation.toylang
program a = { if a program then sleep; } .
